added image folder

--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <div id="container2">
         <div class="navbar">
 <div class="im1">
-    <img src="shoeicon.png" class="im1">&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+    <img src="images/shoeicon.png" class="im1">
     <h1>Pomver</h1>
 </div>
-<div class="navbar2">&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+<div class="navbar2">
 </br>
 </br>
-    <button type="Home" class="button">Home</button>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-    <button type="shop" class="button">Shop</button>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-<button type="sale" class="button">Sale</button>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-<button type="blog" class="button">Blog</button>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-<button type="contact" class="button">Contact</button>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+    <button type="Home" class="button">Home</button>
+    <button type="shop" class="button">Shop</button>
+<button type="sale" class="button">Sale</button>
+<button type="blog" class="button">Blog</button>
+<button type="contact" class="button">Contact</button>
 </div>
+<div class="nav3">
 <button type="account" class="button">My account</button>
-    <img src="searchicon.png" class="im2">
-    <img src="shopping-bag-icon (1).webp" class="im3">
+    <img src="images/searchicon.png" class="im2">
+    <img src="images/shopping-bag-icon (1).webp" class="im3">
+    </div>
         </div>
         <div class="hero-image1">
             <div class="hero-text2">
@@ -37,43 +39,43 @@
             </div>
         </br></br>
         </div>
-    </br></br>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+    </br></br>
         <h1>Magic comforts</h1>
         <div class="line1">
             <div>
-                <img src="shoes6.jpg" class="imgg1">
-                <p>Model-005</br>$199 <img src="shopping-cart.png" class="im4"></p>
+                <img src="images/shoes6.jpg" class="imgg1">
+                <p>Model-005</br>$199 <img src="images/shopping-cart.png" class="im4"></p>
             </div>
             <div>
-                <img src="shoes2.jpg" class="imgg2">
-                <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+                <img src="images/shoes2.jpg" class="imgg2">
+                <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
             </div>
             <div>
                 <img src="shoes20.jpg" class="imgg3">
-                <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+                <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
             </div>
         </br>
     </br>
             </div>
         <div class="line2">
             <div>
-                <img src="shoes3.jpg" class="imgg5">
-                <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+                <img src="images/shoes3 (copy).jpg" class="imgg5">
+                <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
             </div>
             <div>
-                <img src="shoes5.jpg" class="imgg6">
-                <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+                <img src="images/shoes5 (copy).jpg" class="imgg6">
+                <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
             </div>
             <div>
-                <img src="shoes9.jpg" class="imgg7">
-                <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+                <img src="images/shoes9.jpg" class="imgg7">
+                <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
             </div>
         </div>
         <button type="see all">See All</button>
         <div class="line3">
             <div>
             <h1>Await Comfort and</br>Enchantment.Daily.</h1>
-            <img src="shoes14.webp" class="imgg8">
+            <img src="images/shoes14.webp" class="imgg8">
         </div>
         <div>
         </br>
@@ -81,23 +83,23 @@
         </br>
          </br>
             <p>Designed for the way you live your life. Atoms are beatiful in</br> their simplicity, supporting your feet with absolute comfort.</p>
-            <img src="shoes16.jpg" class="imgg9">
+            <img src="images/shoes16.jpg" class="imgg9">
         <button type="see all">See All</button>
         </div>
         </div>
         <h1>Explore Popular Product</h1>
       <div class="line4">
         <div>
-            <img src="shoes4.jpg" class="imgg11">
-            <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+            <img src="images/shoes4.jpg" class="imgg11">
+            <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
         </div>
         <div>
-            <img src="shoes7.jpg" class="imgg12">
-            <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+            <img src="images/shoes7.jpg" class="imgg12">
+            <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
         </div>
         <div>
-            <img src="shoes8_.jpg" class="imgg13">
-            <p>Model-005</br>$199<img src="shopping-cart.png" class="im4"></p>
+            <img src="images/shoes8_.jpg" class="imgg13">
+            <p>Model-005</br>$199<img src="images/shopping-cart.png" class="im4"></p>
         </div>
       </div>
       <div class="heroimage2">
@@ -140,15 +142,15 @@
         </div>
         <div>
         <h2>Follow us</h2>
-        <img src="facebook.jpg" class="im5"></br></br><img src="linkedin.PNG.png"class=im6></br></br><img src="twitter.png" class="im7">
+        <img src="images/facebook.jpg" class="im5"></br></br><img src="images/linkedin.PNG (another copy).png"class=im6></br></br><img src="images/twitter.png" class="im7">
       </div>
 </div>
      <b>____________________________________________________________________________________________________________________________________________________________________________________________________________</b>     
        <div class="below">
-       <p>Privancy Policy</p>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-       <p>Terms & Conditions</p>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;    
-       <p>Cookie Preferences</p>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace; &NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;                 
-       <p>Copyright @ 2024 Hussain</p>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+       <p>Privancy Policy</p>
+       <p>Terms & Conditions</p>  
+       <p>Cookie Preferences</p>                 
+       <p>Copyright @ 2024 Hussain</p>
        </div>
     </div>
     </div>
